--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <button id="spinButton" class="spin-button">Spin for Love Advice</button>
         </div>
 
-        <div id="advice" class="advice"></div>
+        <div class="advice-container">
+            <div id="advice" class="advice"></div>
+        </div>
 
         <div class="hearts">
             <div class="heart"></div>
